--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <canvas></canvas>
+    <textarea id = "textarea" rows="10" readonly cols = "45"></textarea>       
 
 </body>
 </html>
